<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22577a"
    tools:context=".SelectedPokemonActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#FAEDE2"
        android:padding="8dp"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/searchBox"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/search_hint"
        android:imeOptions="actionSearch"
        android:singleLine="true"
        android:textColor="#FAEDE2"
        android:textColorHint="#FAEDE2"
        android:backgroundTint="#FAEDE2"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/searchBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/loadMoreBtn"
        tools:listitem="@layout/item_pokemon"/>

    <Button
        android:id="@+id/loadMoreBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/load_more"
        android:backgroundTint="#FAEDE2"
        android:textColor="#22577a"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        android:backgroundTint="#FAEDE2"
        android:textColor="#22577a"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/loadMoreBtn"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>